--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,8 +15,8 @@ samplemanifest: "WORKDIR/manifests/samples.tsv"
 species: "hg19" #species hg19 or hg38
 reference_source: "usc" #NCBI or USC
 
-# first_pass completes trimming, alignment, assembly and a complete histogram
-# second_pass completes subsetting, DAC analysis and DYAD analysis
+# first pass completes trimming, alignment, assembly and a complete histogram
+# second pass completes subsetting, DAC analysis and DYAD analysis
 # third pass completes comparisons between multiple samples
 pipeline_phase: "first_pass" #first_pass, second_pass, third_pass
 
@@ -24,13 +24,14 @@ pipeline_phase: "first_pass" #first_pass, second_pass, third_pass
 # second_pass required
 ########################
 # User may change the selected-bed file to include a different bed file to subset samples
-# this file is located in WORKDIR/resources/bed_lists.csv file and includes a shorthand name
-# for the list, and the full path to the bed file
-
-# selected_shorthand,selected_bed
-# proteinCoding,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed
-# 1000_ALUrich,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/1000.Genes.ALU-rich.bed
-# 2500_ALUdepleted,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/2500.Genes.ALU-depleted.bed
+## file must be located /WORKDIR/resourcs/
+bed_list_name: "bed_lists.csv"
+## file includes a shorthand_/name,abosulte_path
+## example
+### selected_shorthand,selected_bed
+### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed
+### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/1000.Genes.ALU-rich.bed
+### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/2500.Genes.ALU-depleted.bed
 
 # if the file has not been created then create it
 # grep -Fwf $gene_list $master_bed_file | awk -v OFS='\t' '{{print $1,$2,$3}}'> $selected_bed_file
@@ -46,8 +47,8 @@ max_distance: 1500
 ########################
 # if selected the manifest/contrast_manifest.tsv must be completed
 output_contrast_location: "WORKDIR/merged_DACS" #"/data/Zhurkin-20/analysis/sent_to_pi/"
-contrastmanifest: "WORKDIR/manifests/contrasts.tsv"
-contrast_shorthand: ""
+contrastmanifest: "WORKDIR/manifests/CONTRASTS_FILL_IN.tsv"
+contrast_shorthand: "SHORTHAND_FILL_IN"
 
 #########################################################################################
 # reference files
