--- a/config/config.yaml
+++ b/config/config.yaml
@@ -33,25 +33,24 @@ max_distance: 1500
 master_table: "Y"
 
 ## If master_table: "N"
-## User may change the selected-bed file to include a different bed file to subset samples
-## file must be located /WORKDIR/resourcs/
-## file includes a shorthand_/name,abosulte_path
-### selected_shorthand,selected_bed
-### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed
-### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/1000.Genes.ALU-rich.bed
-### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/2500.Genes.ALU-depleted.bed
-bed_list_name: "bed_lists.csv"
-
-# if the file has not been created then create it
-# grep -Fwf $gene_list $master_bed_file | awk -v OFS='\t' '{{print $1,$2,$3}}'> $selected_bed_file
-
+### User may change the selected-bed file to include a different bed file to subset samples
+### file must be located /WORKDIR/resourcs/
+### file includes a shorthand_/name,abosulte_path
+#### selected_shorthand,selected_bed
+#### NAME_FILL_IN,/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed
 ## If master_table: "Y"
 ## user must select a single bed file to run analysis
 ### /data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed
+#bed_list_name: "bed_lists.csv"
 bed_list_name: "/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed"
 
-# the total number of gene lists to create
-gene_list_n: 10
+## if a specific bed file has not been created then create it
+### grep -Fwf $gene_list $master_bed_file | awk -v OFS='\t' '{{print $1,$2,$3}}'> $selected_bed_file
+
+## if master_table: "Y"
+## the total number of gene lists to create
+gene_list_n: 40
+
 ########################
 # third pass required
 ########################
