--- a/config/config.yaml
+++ b/config/config.yaml
@@ -27,10 +27,10 @@ fragment_length_min: "140" #minimum fragment length
 fragment_length_max: "160" #maximum fragment length
 
 limit: 1000000
-max_distance: 1500
+max_distance: 1100
 
 # Require master_table
-master_table: "Y"
+master_table: "N"
 
 ## If master_table: "N"
 ### User may change the selected-bed file to include a different bed file to subset samples
@@ -41,8 +41,8 @@ master_table: "Y"
 ## If master_table: "Y"
 ## user must select a single bed file to run analysis
 ### /data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed
-#bed_list_name: "bed_lists.csv"
-bed_list_name: "/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed"
+bed_list_name: "bed_lists.csv"
+# bed_list_name: "/data/CCBR_Pipeliner/Pipelines/ccbr1214/bed_files/hg19_protein-coding_genes.bed"
 
 ## if a specific bed file has not been created then create it
 ### grep -Fwf $gene_list $master_bed_file | awk -v OFS='\t' '{{print $1,$2,$3}}'> $selected_bed_file
